<resources>
    <string name="app_name">MetronomePro</string>
    <string name="title_editor">Editor</string>
    <string name="title_metronome">Metronome</string>
    <string name="metronome_increment_small">+1</string>
    <string name="metronome_decrement_small">-1</string>
    <string name="metronome_decrement_medium">-5</string>
    <string name="metronome_increment_medium">+5</string>
    <string name="metronome_decrement_large">-10</string>
    <string name="metronome_increment_large">+10</string>
    <string name="metronome_start_button_title">Start</string>
    <string name="metronome_stop_button_title">Stop</string>
    <string name="decrement_button_title">-</string>
    <string name="increment_button_title">+</string>
    <string name="add_new_beat">Add new beat</string>
    <string name="add_new_pattern">Add new pattern</string>
    <string name="delete_pattern">Delete pattern</string>
    <string name="title_library">Library</string>
    <string name="infinite_beat_subtitle">Beat repeats continuously</string>
    <string name="save_pattern">Save pattern</string>
    <string name="beat_deleted">Beat was deleted</string>
    <string name="pattern_deleted">Pattern was deleted</string>
    <string name="undo">Undo</string>
    <string name="bpm_count">%d</string>
    <string name="tones_count">%d</string>
    <string name="repetitions_count">%d</string>
    <string name="save_the_current_pattern">Save the current pattern</string>
    <string name="delete_all_beats">Delete all beats</string>
    <string name="beat_pattern_name_placeholder">Pattern Name</string>
    <string name="beat_pattern_name_prompt_title">Please enter a name for your pattern</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="play_beat">Play beat</string>
    <string name="remove_note">Remove note</string>
    <string name="add_note">Add note</string>
    <string name="bpm_label">BPM</string>
    <string name="repetitions_label">Repetitions</string>
    <string name="notes_in_beat">Notes</string>
    <plurals name="bars_count">
        <item quantity="one">%d bar</item>
        <item quantity="other">%d bars</item>
    </plurals>
</resources>