<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tones_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/beat_buttons">

        <TextView
            android:id="@+id/tones_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:text="@string/notes_in_beat"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tones_decrement_button"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/remove_note"
            app:icon="@drawable/round_remove_24" />

        <TextView
            android:id="@+id/tones_text_view"
            style="@style/counter_label"
            android:text="999" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tones_increment_button"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/add_note"
            app:icon="@drawable/round_add_24" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/beat_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <htw.gma_sose22.metronomeui.views.ToneButtonView
            android:id="@+id/beat_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <htw.gma_sose22.metronomeui.views.ToneButtonView
            android:id="@+id/beat_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <htw.gma_sose22.metronomeui.views.ToneButtonView
            android:id="@+id/beat_button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <htw.gma_sose22.metronomeui.views.ToneButtonView
            android:id="@+id/beat_button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <htw.gma_sose22.metronomeui.views.ToneButtonView
            android:id="@+id/beat_button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <htw.gma_sose22.metronomeui.views.ToneButtonView
            android:id="@+id/beat_button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <htw.gma_sose22.metronomeui.views.ToneButtonView
            android:id="@+id/beat_button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <htw.gma_sose22.metronomeui.views.ToneButtonView
            android:id="@+id/beat_button_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible" />

    </LinearLayout>

</merge>